# safe-llm

./: .gitignore  README.md  pyproject.toml
outputs/: refusal_eval_report.json
outputs/26-06-28_100619/: gate_trace.json
outputs/26-06-28_110938/: gate_trace.json
outputs/26-07-05_222006/: gate_trace.json
outputs/26-07-06_144854/: gate_trace.json
outputs/example/: gate_trace.json
src/safe_llm/: __init__.py  __main__.py  cli.py  gate.py  mock_stream.py  safe_llm.py  server.py
src/safe_llm/classifiers/: __init__.py  classifiers.py  router.py
src/safe_llm/detector/: __init__.py  detector.py
src/safe_llm/eval/: __init__.py  datasets.py  report.py
src/safe_llm/llm/: __init__.py  base.py  mock.py  ollama.py
src/safe_llm/refusal/: __init__.py  evaluation.py  prompts.py
src/safe_llm/rules/: __init__.py  engine.py  yaml_subset.py
src/safe_llm/taxonomy/: __init__.py  taxonomy.py
tests/: _heavy.py  test_classifiers.py  test_detector.py  test_eval_datasets.py  test_eval_report.py  test_gate.py  test_gate_use_ml_detector.py  test_mock_backend.py  test_refusal.py  test_rules.py  test_taxonomy.py
