[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-llm"
version = "0.1.0"
description = "Layered safety harness around any local LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "ollama>=0.6.2",
    "requests>=2.34.2",
]
license = "MIT"

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.32"]
classifiers = [
    "detoxify>=0.5.2",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "nltk>=3.8",
]
pii = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]
eval = [
    "datasets>=2.14",
]
all = [
    "safe-llm[server,classifiers,pii,eval]",
]

[project.scripts]
safe-llm = "safe_llm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/safe_llm"]

[tool.hatch.build.targets.wheel.force-include]
"src/safe_llm/rules/data" = "safe_llm/rules/data"
